# CARCAEA

./: .gitignore  ENDPOINTS.md  README.md  docker-compose.yml  docker.compose.prod.yml  generate-db-types.ps1  package-lock.json
essentia/: .Docker_old  API_GUIDE.md  Dockerfile  Feature_Extractors.txt  Operation.py  Process.py  Util.py  _Dockerfile.old  app.py  classifiers.md  essentia.pyi  models_config.py  pyproject.toml  pyrightconfig.json  regressor.py  requirements.txt
essentia/typings/essentia/: standard.pyi
extractor_server/: .dockerignore  .gitignore  Dockerfile  PROJECT_STRUCTURE.md  README.md  app.py  config.py  requirements.txt  routes.py  run_tests.sh  schemas.py  test_endpoint.py  test_extract.py  test_extractor.py  utils.py
extractor_server/_extractors copy/: base.py  f0_envelope.py  mode.py  pulse_clarity.py  tempo.py
extractor_server/_test_res_txt_legacy/: Brain Power.txt  Low Roar - Ill Keep Coming.txt  美波「アメヲマツ、」.txt
extractor_server/extractors/: __init__.py  base.py  f0_envelope.py  loudness.py  master_feature_extractor.py  mode.py  pulse_clarity.py  resampler.py  ssm_optimization_guide.py  tempo.py  (+2 more)
jamendo_process/: .gitignore  IdempotentProcessor.ts  OSResource.ts  index.ts  package-lock.json  package.json  tsconfig.json
postgres/: Dockerfile  __init.sql  init.sql
server/: .dockerignore  .gitignore  API_DOCUMENTATION.md  Dockerfile  cookies.txt  index.html  package-lock.json  package.json  tsconfig.json
test/: README.md  plot_predictions.py  plot_va_comparison.py  test_essentia_api.ps1  test_essentia_api.py  test_regressor_api.ps1
(+394 files in other folders)
