[project]
name = "essentia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "essentia-tensorflow>=2.1b6.dev1389",
    "fastapi>=0.128.0",
    "librosa>=0.11.0",
    "numpy<2",
    "python-multipart>=0.0.21",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.40.0",
]
